--- a/blocks/header.css
+++ b/blocks/header.css
@@ -10,7 +10,7 @@
   height: 100vh;
   display: flex;
   flex-direction: column;
-  z-index: -1;
+  z-index: 1;
 }
 
 .header__title {
