--- a/blocks/reservation.css
+++ b/blocks/reservation.css
@@ -21,10 +21,7 @@
 }
 
 .reservation__form {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding: 0;
   margin: 0;
+  width: 100%;
   max-width: 385px;
 }
